--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "build-gh-pages": "parcel build src/index.html --public-url=/test-project"
   },
   "dependencies": {
     "react": "^18.2.0",
