--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "test-project",
   "version": "1.0.0",
-  "description": "Empty project.",
+  "description": "",
+  "homepage": "https://viktoriiaslobodeniuk.github.io/test-project/",
   "main": "index.js",
   "keywords": [],
-  "author": "",
+  "author": "Victoriia Slobodeniuk <v.m.slobodeniuk@gmail.com>",
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html --open",
     "build": "parcel build src/index.html",
     "build-gh-pages": "parcel build src/index.html --public-url=/test-project"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ViktoriiaSlobodeniuk/test-project.git"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -24,5 +29,6 @@
     "eslint-plugin-react": "^7.32.2",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.7"
-  }
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
