--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "url": "git+https://github.com/ViktoriiaSlobodeniuk/test-project.git"
   },
   "dependencies": {
+    "axios": "^1.3.6",
+    "components": "^0.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
