--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-project",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://viktoriiaslobodeniuk.github.io/test-project/",
+  "homepage": "/test-project",
   "main": "index.js",
   "keywords": [],
   "author": "Victoriia Slobodeniuk <v.m.slobodeniuk@gmail.com>",
